# linkml-registry

./: .codespellrc  .gitignore  404.html  LICENSE  Makefile  README.md  about.yaml  config.yaml  exclusion_rules.json  index.html  linkml_registry.yaml  main.py  mkdocs.yml  models.csv  models.yaml  pyproject.toml  sitemap.xml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Evaluation/: index.html
Float/: index.html
HttpsIdentifier/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LicenseEnum/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
SchemaMetadata/: index.html
SchemaRegistry/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
base_purl/: index.html
build-details/: index.html
class_count/: index.html
count_statistic/: index.html
csv/: registry.csv
description/: index.html
docs/: linkml_registry.yaml
domain/: index.html
entries/: index.html
enum_count/: index.html
errors/: index.html
github_repo/: index.html
github_stars/: index.html
graphql/: registry.graphql
homepage/: index.html
issue_tracker/: index.html
jsonschema/: registry.schema.json
license/: index.html
linkml_registry/: cli.py  evaluate.py  index.html  markdown_dumper.py  registry.py
name/: index.html
owl/: registry.owl.ttl
proportion_elements_mapped/: index.html
python/: registry.py
(+748 files in other folders)
